Allow publishers to specify a rabbitmq exchange as well as queue name (but still allow configuration via EmapDataSource, the old way).
Make HL7 saving tests pass.

Make HL7 parser slightly more robust.